force-app/main/default/objects/Student_Application__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Select Your Department</inlineHelpText>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>