force-app/main/default/objects/Student_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>