force-app/main/default/objects/Student_Application__c/validationRules/Block_Student_Manual_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Student_Manual_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(Application_Status__c, &quot;Approved&quot;),
      ISPICKVAL(Application_Status__c, &quot;Rejected&quot;)
   ),
   NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Application_Status__c</errorDisplayField>
    <errorMessage>You cannot approve or reject your own internship application.</errorMessage>
</ValidationRule>