force-app/main/default/objects/Student_Application__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be after the start date.</errorMessage>
</ValidationRule>