force-app/main/default/objects/Student_Application__c/validationRules/End_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be in the past. Please select today or a future date.</errorMessage>
</ValidationRule>