force-app/main/default/objects/Student_Application__c/validationRules/Name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Student_Name__c , &quot;^[a-zA-Z ]+$&quot;))</errorConditionFormula>
    <errorDisplayField>Student_Name__c</errorDisplayField>
    <errorMessage>Name cannot contain numbers. Please enter only letters.</errorMessage>
</ValidationRule>