force-app/main/default/objects/Student_Application__c/validationRules/Start_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cannot be in the past. Please select today or a future date.</errorMessage>
</ValidationRule>