force-app/main/default/objects/Student_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_Name__c</columns>
    <columns>Department__c</columns>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>